examples/test/testpolicy4899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4899
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key23: value5
      key12: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value23
          key47: value21
      podSelector:
        matchLabels:
          key26: value36
          key27: value4
          key39: value27
